<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/heart_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/ic_heart_large"/>

    <LinearLayout
        android:id="@+id/manual_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="146dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/manual_systolic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_small"
            android:paddingStart="@dimen/margin_large"
            android:paddingTop="@dimen/margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_systolic"
                android:textColor="@color/grey_text"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/manual_sbp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_large"
                android:textSize="16sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/manual_diatotic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_small"
            android:paddingStart="@dimen/margin_large"
            android:paddingTop="@dimen/margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_diastolic"
                android:textColor="@color/grey_text"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/manual_dbp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_large"
                android:textSize="16sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/manual_pulse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_small"
            android:paddingLeft="@dimen/margin_large"
            android:paddingTop="@dimen/margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pulse_min"
                android:textColor="@color/grey_text"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/manaul_pulse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_large"
                android:textSize="16sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/manual_date_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_small"
            android:paddingLeft="@dimen/margin_large"
            android:paddingTop="@dimen/margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_date_time"
                android:textColor="@color/grey_text"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/manaul_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_large"
                android:textSize="16sp"/>

        </RelativeLayout>

    </LinearLayout>

   <Button
       android:id="@+id/manual_save"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/manual_text"
       android:layout_centerHorizontal="true"
       android:layout_marginLeft="@dimen/margin_extra_large"
       android:layout_marginRight="@dimen/margin_extra_large"
       android:layout_marginTop="@dimen/margin_extra_large"
       android:background="@drawable/btn_login_bg"
        android:textColor="@color/white"
       android:text="Save"/>


</RelativeLayout>